--- a/.github/workflows/dotweaks.yml
+++ b/.github/workflows/dotweaks.yml
@@ -37,7 +37,7 @@ jobs:
         echo "$SECRET_GERRIT_KEY" >secret_gerrit_key
         chmod 600 secret_ssh_key
         chmod 600 secret_gerrit_key
-        ssh-agent bash -c 'ssh-add secret_gerrit_key; GIT_SSH_COMMAND="ssh -vvv" git clone ssh://test4aiuortch@gerrit.fd.io:29418/vpp'
+        ssh-agent bash -c 'ssh-add secret_gerrit_key; GIT_SSH_COMMAND="ssh -o StrictHostKeyChecking=no -vvv" git clone ssh://test4aiuortch@gerrit.fd.io:29418/vpp'
         ssh-agent bash -c 'ssh-add secret_ssh_key; git clone git@github.com:vpp-dev/vpp-daily-tweaks.git'
     - name: Install vpp deps
       run: |
