--- a/.github/workflows/dotweaks.yml
+++ b/.github/workflows/dotweaks.yml
@@ -47,19 +47,20 @@ jobs:
         make install-dep test-dep
         git checkout -b ayourtch-vpp-daily-tweaks
         cd ..
+        pwd
     - name: Do the needed tweaks
       run: |
-        echo "starting at $(date)" >RUN-LOG.md
-        cd vpp
+        pwd
+        git --no-pager log HEAD~1..
+        pushd vpp
         make test-refresh-deps
         CHANGES="$(git diff | wc -l)"
         if [ "$CHANGES" != "0" ]; then
           echo "Found something to submit:"
           git diff
           git branch
-          git diff >>../RUN-LOG.md
         fi
-        cd ..
+        popd
         echo "Last done at $(date)" >>RUN-LOG.md
 
     - name: Push the updates
