git remote add, add, I mean! :)

--- a/.github/workflows/dotweaks.yml
+++ b/.github/workflows/dotweaks.yml
@@ -39,7 +39,7 @@ jobs:
         chmod 600 secret_gerrit_key
         git clone https://github.com/FDio/vpp
         # only get the whatever is newest in FDIO, to save the waste of b/w for everyone
-        (cd vpp; git remote fdio.origin add ssh://test4aiuortch@gerrit.fd.io:29418/vpp)
+        (cd vpp; git remote add fdio.origin add ssh://test4aiuortch@gerrit.fd.io:29418/vpp)
         ssh-agent bash -c 'ssh-add secret_gerrit_key; cd vpp; GIT_SSH_COMMAND="ssh -o StrictHostKeyChecking=no" git pull fdio.origin master'
         ssh-agent bash -c 'ssh-add secret_ssh_key; git clone git@github.com:vpp-dev/vpp-daily-tweaks.git'
     - name: Install vpp deps
